@@ -2,7 +2,7 @@
 # -*- mode: python -*-
 #
 # Copyright (C) 2006, 2007, 2008 Loic Dachary <loic@dachary.org>
-# Copyright (C) 2008 Bradley M. Kuhn <bkuhn@ebb.org>
+# Copyright (C)             2008 Bradley M. Kuhn <bkuhn@ebb.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -57,7 +57,7 @@ global table2ID
 table1ID = 100
 table2ID = 200
 settings_xml = """<?xml version="1.0" encoding="ISO-8859-1"?>
-<server verbose="4" autodeal="yes" >
+<server verbose="4" autodeal="yes" max_missed_round="5">
   <delays autodeal="2" autodeal_max="2" autodeal_check="0" round="0" position="0" showdown="0" finish="0" />
 
   <path>@POKER_ENGINE_PKGSYSCONFDIR@ @POKER_NETWORK_PKGSYSCONFDIR@</path>
@@ -149,6 +149,9 @@ class MockService:
         self.joined_count = 0
         self.joined_max = 1000
 
+    def getMissedRoundMax(self):
+        return 5  # if you change this, change it in settings_xml above
+
     # Just copied these joinedCount functions from the real service.
     def joinedCountReachedMax(self):
         """Returns True iff. the number of joins to tables has exceeded
@@ -220,7 +223,7 @@ class MockService:
             del self.players[serial]
             return True
         else:
-            self.error("Player is already seated at table, ." % table_id)
+            self.error("Player is already seated at table, %d." % table_id)
             return False
 
     def deleteTable(self, x):
@@ -282,7 +285,6 @@ class MockService:
             else:
                 self.testObject.fail("Unkown serial in hand history: %d" % serial)
                 
-
     def updatePlayerRake(self, currencySerial, serial, rakeAmount):
         if self.testObject:
             self.testObject.assertEqual(rakeAmount,  7)
@@ -445,7 +447,8 @@ class PokerTableTestCase(unittest.TestCase):
                                              'seats': 4,
                                              'player_timeout' : 6, 
                                              'muck_timeout' : 1,
-                                             'currency_serial': 0
+                                             'currency_serial': 0,
+                                             'max_missed_round' : 1
                                              })
         self.table2 = pokertable.PokerTable(self.service, table2ID, 
                                            { 'name': "table2",
@@ -458,6 +461,14 @@ class PokerTableTestCase(unittest.TestCase):
                                              })
         self.service.table1 = self.table
         self.service.table2 = self.table2
+
+        # Test to make sure that the max_missed_round count can be
+        # overwritten by description in init settings.  note That table1
+        # has setting of '1' for that value, but table2 accepts the
+        # default above.
+        self.assertEquals(self.table.max_missed_round, 1)
+        self.assertEquals(self.table2.max_missed_round, 5)
+
         self.clients = {}
     # -------------------------------------------------------------------
     def tearDown(self):
